# paradise

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  pytest.ini  requirements-client.txt  requirements-dev.txt  server.py  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml
src/paradise/: run.py  server.py
src/paradise/public/: index.html
src/paradise/template/: index.html
tests/: test_command.py
