[metadata]
name = paradise
url = https://github.com/rahulsrma26/paradise
project_urls =
    Code = https://github.com/rahulsrma26/paradise
license = LICENSE
platform = any
author = Rahul Sharma
author_email = rahulsrma26@gmail.com
maintainer = rahulsrma26
maintainer_email = welcometors@gmail.com
description = A file sharing and media streaming utility for local network
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sharing streaming network setuptools development
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Networking
    Topic :: System :: Filesystems
    Topic :: Communications :: File Sharing
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Multimedia

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    paradise = paradise.run:main

[bdist_wheel]
universal = 0